# droidstar-demo

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  elm-package.json  quick-emulator  shell.nix
client/: Main.elm  elm-package.json
client/css/: dropdown.css
client/src/: BigContent.elm  Display.elm  Exp.elm  Main.elm  ServerComm.elm  Types.elm
compose/: docker-compose.yml
docker-client/: Dockerfile  index.html
docker-server/: Dockerfile  droidstar-debug.apk  exprs.nix
docker-setup/: run  setup
server/: ChangeLog.md  Dockerfile  Dockerfile-old  Makefile  config.ini  droidstar-demo-server.cabal  quick-server  start-all.sh  start.sh
server/_server/src/: EmuComm.hs  EmuMsg.hs  Main.hs  Sbt.hs  TypeState.hs
server/src/: CLI.hs  ClientComm.hs  Config.hs  EmuComm.hs  EmuMsg.hs  Main.hs  Prettify.hs  Sbt.hs  TypeState.hs
