name:                droidstar-demo-server
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              octalsrc
maintainer:          nicklewchenko92@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable droidstar-demo-server
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >=4.9 && <4.11
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
                     , http-types
                     , safe

                     , containers
                     , mtl
                     , turtle
                     , aeson
                     , optparse-applicative
                     , foldl
                     , parsec
                     , dns
  hs-source-dirs:      src
  default-language:    Haskell2010
